--- a/WorldFood.html
+++ b/WorldFood.html
@@ -13,10 +13,9 @@
     <!--Font Awesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
-    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="./stylesheets/WFstylesheet.css" rel="stylesheet" type="text/css">
-    <!--WFmap JS-->
-    <script src="WFmap.js"></script>
+    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css"><link href="./stylesheets/WFstylesheet.css" rel="stylesheet" type="text/css">
+    <!--Map and Other JavaScript-->
+    <script src="WFmap.js"></script><script src="newsletterimage.min.js"></script>
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
@@ -58,9 +57,8 @@
                     <h4 class="description"> The vegan diet can be traced all the way back to 600BCE India, and today it has been enthuastically adopted by cusines all over the world.</h4>
                     <p>Click on the markers to see everything from Italian, Ethopian to Raw vegan cuisine.</p>
                 </div>
-                <div class="container bg-light border rounded shadow my-2">
-                    Map
-                    <div id="map"></div>
+                <div class="container bg-light border rounded shadow my-2" >
+                    <div id="map" class="py-2"></div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-12 " id="sidebar">
@@ -112,15 +110,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="container my-2 rounded border NewsletterStyle" id="newsletter">
+                <div class="container my-2 rounded border NewsletterStyle" id="newsletter" onmouseover="signUp(this)" onmouseout="signUpAway(this)">
                     <h4 class="text-center pt-2 font-weight-bold sidebarHeader mb-1">Fear of Missing Out?<i class="far fa-paper-plane"></i></h4>
                     <h6 class="card-subtitle text-center mb-1">Sign up to our newsletter!</h6>
                     <div class="row align-items-center no-gutters">
                         <div class="col-lg-12 col-sm-6 col-6 fill">
-                            <img class="d-block w-70 p-2 img-fluid" src="img/newsletter.gif" alt="hangry pandy boi" style="">
+                            <img class="d-block w-70 p-2 img-fluid" src="img/newsletter.gif" alt="hangry pandy boi" id="SignUp">
                         </div>
                         <div class="col-lg-12 col-sm-6 col-6">
-                            <form action="" method="">
+                            <form>
                                 <div>
                                     <label for="question"> My email address is</label>
                                     <input type="email" id="email" placeholder="fedmeplz@ritenow.co.uk" style="width:100%" required>
@@ -161,7 +159,7 @@
                                       </label>
                                     </div>
                                 </div>
-                                <p class="text-center mb-0"><button type="submit" class="btn my-2 ourButton2"> Submit!</button></p>
+                                <button type="submit" class="btn my-2 ourButton2"> Submit!</button>
                             </form>
                         </div>
                     </div>
