--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -18,13 +19,10 @@
 </head>
 
 <body class="text-center gradient_bluepink_bkgrnd">
-    <!--navBar button-->
     <nav class="navbar navbar-expand-md navbar-light navStyling display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
   </button>
-        <!--navbar Menu-->
         <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
-            <!--this is the container of the menu and flex parent of the two uls-->
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link"><i class="fas fa-home fa-1x"></i></a></li>
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
@@ -86,7 +84,8 @@
                             <a href="WorldFood.html" class="btn my-2 ourButton">World Food</a>
                         </div>
                         <div>
-                            <a class="btn my-2 ourButton" href="#" id="Surprise" onclick="surpriseMeEats()" target="_blank">Surprise Me!</a>
+                            <a class="btn my-2 ourButton" href="#" id="Surprise" onclick="surpriseMeEats()" target="_blank" onmouseover="explanation(this)" onmouseout="explanationAway(this)">Surprise Me!</a>
+                                <div class="position-relative font-weight-bold"><p class="text-center mb-0 surpiseExplain" id="explaining"></p></div>
                         </div>
                     </div>
                 </div>
@@ -104,4 +103,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body> </html>
+</body>
+
+</html>
